# DL_Verifier

./: .gitignore  Experiment.ipynb  README.md  environment.yml  pyproject.toml  requirement.txt
Notebooks/: adaptive_N_finetune.ipynb
Scripts/: Lora_model.py  Main.py  Train_bce.py  Train_pAUC.py  Verifier_dataset.py  config_loader.py  configure.yaml
scripts/: adaptive_N_finetune.ipynb  dataset_generation.py  experiment.ipynb  full_finetune_verifier.py  lora_finetune.ipynb  lora_finetune_adaptive_n.py  verifier.ipynb
scripts/notebook/: adaptive_N_finetune.ipynb  verifier.ipynb
scripts/notebooks/: adaptive_N_finetune.ipynb  experiment.ipynb  lora_finetune_verifier.ipynb  verifier.ipynb
src/llm_verifier/dataset/: __init__.py  dataset.py
src/llm_verifier/verifier/: __init__.py  verifier.py
verifier_lora/: README.md  adapter_config.json
